[tool.poetry]
name = "depth2pointcloud"
version = "0.1.0"
description = ""
authors = ["torupati"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
open3d = "^0.17.0"
scikit-learn = "^1.2.2"
tqdm = "^4.65.0"
pandas = "^2.0.1"
pyyaml = "^6.0"
addict = "^2.4.0"
pillow = "^9.5.0"
matplotlib = "^3.7.1"
opencv-python = "^4.7.0.72"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
